# Aster

./: .gitignore  CHANGELOG.zh-CN.md  README.en-US.md  README.md  README.zh-CN.md  USER_MANUAL.html  USER_MANUAL.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  editor-update.json  editor.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: desktop.rs  error.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs  paths.rs  state.rs
src-tauri/src/application/: authentication_service.rs  credential_service.rs  mod.rs  pairing_service.rs  remote_pagination.rs  report_pagination.rs  secret_service.rs  security_rate_limiter.rs  write_limits.rs
src-tauri/src/application/ports/: credential_store.rs  mod.rs
src-tauri/src/commands/: app_commands.rs  approval_commands.rs  backup_commands.rs  host_commands.rs  import_commands.rs  master_data_commands.rs  mod.rs  report_commands.rs  stock_commands.rs  stocktake_commands.rs  user_commands.rs
src-tauri/src/db/: approval_repository.rs  backup_repository.rs  balance_repository.rs  client_connection_repository.rs  connection.rs  master_data_repository.rs  migrations.rs  mod.rs  paginated_master_data_repository.rs  paginated_report_repository.rs  paginated_stock_repository.rs  paginated_stocktake_repository.rs  pagination.rs  pagination_migrations.rs  performance_migrations.rs  report_filters.rs  report_repository.rs  repository.rs  security_migrations.rs  session_repository.rs  stock_repository.rs  stocktake_repository.rs  user_repository.rs
src-tauri/src/db/master_data_repository/: items.rs  tests.rs
src-tauri/src/db/migrations/: tests.rs
src-tauri/src/db/report_repository/: consumption.rs  tests.rs
src-tauri/src/db/stock_repository/: export.rs  fifo.rs  helpers.rs  movements.rs  persistence.rs  queries.rs  tests.rs  validation.rs
src-tauri/src/db/stocktake_repository/: confirmation.rs  tests.rs
src-tauri/src/domain/: approvals.rs  backups.rs  business_datetime.rs  imports.rs  master_data.rs  mod.rs  pagination.rs  passwords.rs  reports.rs  runtime.rs  status.rs  stock.rs  stocktake.rs  users.rs
src-tauri/src/infrastructure/: connection_limiter.rs  credential_store.rs  http_transport.rs  mod.rs  secure_transport.rs
src-tauri/src/services/: approval_service.rs  backup_service.rs  host_service.rs  import_service.rs  import_value_parser.rs  master_data_service.rs  mod.rs  remote_session_service.rs  report_service.rs  safety_service.rs  status_service.rs  stock_service.rs  stocktake_service.rs  test_support.rs  user_service.rs
src-tauri/src/services/backup_service/: archive.rs  automation.rs  restore.rs  tests.rs
src-tauri/src/services/host_service/: auth.rs  client_registry.rs  http_client.rs  remote_master_data.rs  remote_operations.rs  remote_stock.rs  responses.rs  server.rs  tests.rs
src-tauri/src/services/import_service/: execution.rs  master_data.rs  models.rs  parser.rs  (+2 more)
(+177 files in other folders)
