[package]
name = "aster"
version = "0.1.0"
description = "Aster 酒店物资运营管理桌面客户端"
authors = ["Aster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
directories = "6.0.0"
thiserror = "2.0.18"
serde_repr = "0.1.20"
rust_xlsxwriter = "0.95.0"
calamine = "0.35.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
sha2 = "0.10.9"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.27.0"
